--- a/.gitignore
+++ b/.gitignore
@@ -119,3 +119,8 @@ dist
 .yarn/install-state.gz
 .pnp.*
 .vercel
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
